Show explicit Food and Drinks in hotel Order Food menu
